api-tests-senior: add error type